<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.splash.SplashActivity">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.yfmacit.cryptocurrencypricetracker.ui.dashboard.coindetail.CoinDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/purple_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{viewModel.coinDetail.name, default=detailTitle}"
                android:textColor="@color/navy"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageViewCoin"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="15dp"
                    android:padding="5dp"
                    android:scaleType="center"
                    app:imageUrl="@{viewModel.coinDetail.imageUrl}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageViewAddFavourite"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="15dp"
                    android:onClick="@{() -> viewModel.addOrRemoveFavouriteCoinClicked()}"
                    android:padding="10dp"
                    android:src="@{viewModel.isAddedFavourite() ? @drawable/ic_favourite  : @drawable/ic_non_favourite}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:src="@drawable/ic_refresh"
                    android:onClick="@{() -> viewModel.setSimplePriceRefreshIntervalClicked()}"
                    app:layout_constraintEnd_toEndOf="@+id/imageViewAddFavourite"
                    app:layout_constraintStart_toStartOf="@+id/imageViewAddFavourite"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewAddFavourite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.coinSimplePriceRefreshIntervalSecond + `s`}"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@+id/imageViewAddFavourite"
                    app:layout_constraintStart_toEndOf="@+id/imageViewCoin"
                    app:layout_constraintTop_toTopOf="@+id/imageViewCoin">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/coin_name_title"
                        android:textColor="@color/navy"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@{viewModel.coinDetail.name, default=coinName}"
                        android:textColor="@color/navy" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/coin_symbol_title"
                        android:textColor="@color/navy"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@{viewModel.coinDetail.symbol, default=coinSymbol}"
                        android:textColor="@color/navy" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/coin_hash_algorithm_title"
                        android:textColor="@color/navy"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@{viewModel.coinDetail.hashingAlgorithm == null ? `-` : viewModel.coinDetail.hashingAlgorithm, default=hashAlgorithm}"
                        android:textColor="@color/navy" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/coin_current_price_title"
                            android:textColor="@color/navy"
                            android:textSize="10sp"
                            tools:ignore="SmallSp" />

                        <TextView
                            android:id="@+id/textViewLasCurrentPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="@{viewModel.coinSimplePrice, default=currentPrice}"
                            android:textColor="@color/purple_500" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="@string/coin_price_change_title"
                            android:textColor="@color/navy"
                            android:textSize="10sp"
                            tools:ignore="SmallSp" />

                        <TextView
                            android:id="@+id/textViewLas24HourPriceChange"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:text="@{viewModel.coinDetail.last24HourPer, default=priceChange}"
                            android:textColor="@{viewModel.last24HoursPercentageRiseUp ? @color/green : @color/red}" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/coin_description_title"
                        android:textColor="@color/navy"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:id="@+id/textViewCoinDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@{viewModel.coinDetail.descriptionString, default=coinDescription}"
                        android:textColor="@color/navy" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>